# debian.packaging.wm-icons

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.in  wm-icons_0.4.0.orig.tar.gz.delta  wm-icons_0.4.0.orig.tar.gz.id
debian/: .git-dpm  changelog  clean  control  copyright  rules  source.lintian-overrides  watch  wm-icons.docs  wm-icons.install  wm-icons.lintian-overrides  wm-icons.menu-method  wm-icons.postinst  wm-icons.postrm
debian/patches/: 0001-autotools-cleanup-Remove-files-generated-by-autotool.patch  0001-topic-destdir-Add-DESTDIR-support-for-all-install-co.patch  0002-menu-Tweak-the-Debian-menu-files-for-official-packag.patch  0002-topic-destdir-Add-DESTDIR-support-for-all-install-co.patch  0003-menu-Tweak-the-Debian-menu-files-for-official-packag.patch  series
devel/: Makefile.am  Makefile.in
devel/conf/: style-icons.cfg
devel/template/: fvwm1rc-wm-icons  fvwm2rc-compact-buttons  fvwm2rc-wm-icons  fvwm95rc-wm-icons  scwmrc-wm-icons
devel/template/CVS/: Entries  Repository  Root
doc/: FAQ  Makefile.am  Makefile.in  README.3dpixmaps  README.martys  README.penguins  icons.lst  wm-icons.lsm  wm-icons.lsm.in
etc/: Makefile.am  Makefile.in  fvwm1rc-wm-icons.in  fvwm2rc-compact-buttons.in  fvwm2rc-wm-icons.in  fvwm95rc-wm-icons.in  scwmrc-wm-icons.in
etc/debian-menu-system/: Makefile.am  Makefile.in  README  wm-icons-data.h.in  wm-icons-fvwm2rc-menu.in  wm-icons.h.in
icons/: Makefile.am  Makefile.in
rpm/: Makefile.am  Makefile.in  wm-icons.spec  wm-icons.spec.in
